# thiagowfx.github.io-legacy

./: .gitignore  .rubocop.yml  .travis.yml  .vale  404.md  CNAME  Gemfile  LICENSE  Makefile  README.md  Rakefile  TODO.org  _config.yml  about.md  index.html  index.markdown  index.md  main.css  media.md  mentions.md  pgp.asc  portfolio.js  site.cabal  site.hi  site.hs  talks-and-projects.md
_includes/: footer.html  ga.html  head.html  post-list.html  scripts.html
_layouts/: default.html  home.html  page.html  post.html
_posts/: 2017-10-20-hello-world.md  2017-10-27-c-h-f-taming-the-emacs-dinosaur-ii.md
_styles/TheEconomist/: UnexpandedAcronyms.yml
assets/css/: main.css
assets/fonts/iosevka-ss08/1.13.3/: iosevka.css
assets/fonts/vollkorn/4.015/: vollkorn.css
css/: default.css
paradises/: a-venda.org  anuais.org  conferences.org  csf.org  ctfs.org  games.org
paradises/archive/: clojure.org  git.org  linux.org  principles.org
templates/: default.html  paradise-list.html  paradise.html
