name:               site
version:            0.1.1.0
author:             Thiago Perrotta 
maintainer:         Thiago Perrotta 
license:            GPL-2
license-file:       LICENSE
build-type:         Simple
cabal-version:      >= 1.10

executable site
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -O2
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.6.*
